# mt940-to-csv-public

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: API.md  PRIVACY.md
src/: __init__.py  web_app.py
src/adapters/: __init__.py  file_io.py
src/adapters/web/: __init__.py  logging_config.py  routes.py  schemas.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  convert.py  csv_parse.py  domain.py  insights.py  library_adapter.py  parsing.py  summary.py
tests/: conftest.py
tests/integration/: __init__.py  test_web_api.py
tests/unit/: __init__.py  test_convert.py  test_csv_parse.py  test_insights.py  test_insights_aggregation.py  test_library_adapter.py  test_parsing.py  test_summary.py
web-ui/: insights.html  insights.js  mt940-api.js  web-ui-1-v2.html  web-ui-1-v3.html  web-ui-1-v3.js  web-ui-1.html  web-ui-2-v2.html  web-ui-2.html  web-ui-3-v2.html
